# ecxx

./: CMakeLists.txt  LICENSE  README.md  TODO.md
benchmarks/: CMakeLists.txt  ecxx_benchmark.cpp  entt_benchmark.cpp
dev/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/ecxx/: bit_vector.h  ecs_node.cpp  ecs_node.h  ecxx.cpp  ecxx.h
src/ecxx/impl/: bit_vector.h  components_db.h  ecxx_linked.cpp  entity_map.h  entity_pool.h  entity_spec.h  entity_value.h  entity_wrapper_impl.h  identity_generator.h  runtime_view.h  rview.h  sparse_vector.h  view.h  world.h
src/ecxx/v1/: active_entities.h  component_db.h  component_managers.h  decl.h  ecs_node.h  ecxx1.h  entity.h  entity_impl.h  family_aspect_data.h  managed_family.h  view_filters.h  world.h  world_impl.h  worlds_map.cpp  worlds_map.h
src/ecxx/v2/: components_db.h  ecxx2.h  entity_map.h  entity_pool.h  entity_spec.h  entity_value.h  entity_wrapper.h  mutable_view.h  view.h  world.h
test/: CMakeLists.txt  bit_count_test.cpp  bit_vector_test.cpp  component_test.cpp  components_test.cpp  entity_map_test.cpp  entity_pool_test.cpp  entity_value_test.cpp  identity_generator_test_1.cpp  identity_generator_test_2.cpp  sparse_vector_test.cpp  view_test.cpp  world_test.cpp
test/common/: components.h  identity_generator_test_1.cpp  identity_generator_test_2.cpp
test/v1/: bit_vector_test.cpp  component_test.cpp  family_aspect_test.cpp  query_test.cpp  view_test.cpp
test/v2/: bit_count_test.cpp  components_test.cpp  entity_map_test.cpp  entity_pool_test.cpp  entity_value_test.cpp  sparse_vector_test.cpp  view_test.cpp  world_test.cpp
